--- a/bricks/containers/src/popup/styles.shadow.css
+++ b/bricks/containers/src/popup/styles.shadow.css
@@ -6,6 +6,12 @@
   display: none;
 }
 
+.general-popup-popup {
+  position: fixed;
+  left: 0;
+  top: 0;
+}
+
 .general-popup {
   z-index: 1000;
   box-shadow: 0px 21px 50px 0px rgb(0 0 0 / 46%);
