--- a/bricks/containers/src/popup/styles.shadow.css
+++ b/bricks/containers/src/popup/styles.shadow.css
@@ -21,6 +21,8 @@
   .general-popup-container {
     height: 100%;
     background: var(--antd-dropdown-menu-bg);
+    display: flex;
+    flex-direction: column;
   }
 }
 
@@ -60,6 +62,7 @@
 }
 
 .content {
+  flex: 1;
   overflow: auto;
   padding: 20px;
   margin-top: -1px;
