--- a/bricks/ai/src/chat-view/components/QuickAnswerList/quickAnswerList.shadow.css
+++ b/bricks/ai/src/chat-view/components/QuickAnswerList/quickAnswerList.shadow.css
@@ -1,41 +1,47 @@
 .quick-answer-wrapper {
   margin-top: 20px;
+  border-radius: 6px;
+  border: 1px solid #e8e8e8;
+  padding: 16px 24px;
   .tip {
     font-size: 18px;
+    margin-bottom: 30px;
   }
 
   .quick-answer-list {
     display: grid;
     gap: 24px 16px;
-    margin-top: 30px;
     border-radius: 3px;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 
     .quick-answer-card-item {
       position: relative;
       padding: 16px;
-      box-shadow: 1px 2px 9px #ddd;
+      border-radius: 6px;
       cursor: pointer;
+      display: flex;
+      padding: 10px 20px;
+      gap: 12px;
+      width: auto;
+      box-sizing: border-box;
 
       &:hover {
-        background: #f4f4f4;
+        box-shadow: 1px 2px 9px #ddd;
       }
 
-      .icon {
-        position: absolute;
-        top: -20px;
-        left: 10px;
-        font-size: 26px;
-        background: #fff;
-        box-shadow: 1px 3px 4px #eee;
-        padding: 6px;
-        border-radius: 6px;
+      .left {
+        .icon {
+          font-size: 20px;
+          color: #fff;
+          padding: 8px;
+          border-radius: 6px;
+          margin-top: 4px;
+        }
       }
 
       .content {
-        margin-top: 12px;
-
         .title {
+          font-size: 16px;
           font-weight: bold;
           color: var(--color-normal-text);
         }
@@ -57,21 +63,21 @@
     text-align: center;
     margin-top: 20px;
     .show-more-btn {
-      padding: 4px 20px;
-      border: 1px solid #ddd;
-      border-radius: 20px;
-      cursor: pointer;
       line-height: 24px;
-      color: var(--color-auxiliary-text);
 
-      &:hover {
-        color: #fff;
-        background: var(--color-auxiliary-text);
+      &::after,
+      &::before {
+        content: "- - - - -";
+        color: #d9d9d9;
+        position: absolute;
       }
 
-      &:active {
-        coloe: #fff;
-        background: #393838;
+      &::before {
+        margin-left: -60px;
+      }
+
+      &::after {
+        margin-left: 10px;
       }
     }
   }
