--- a/bricks/diagram/src/experimental-node/styles.shadow.css
+++ b/bricks/diagram/src/experimental-node/styles.shadow.css
@@ -19,7 +19,7 @@
 }
 
 :host(:not([usage="library"])) {
-  background: var(--palette-gray-3);
+  background: rgba(0, 0, 0, 0.2);
   width: 60px;
   height: 60px;
 }
