--- a/bricks/ai/src/chat-view/styles.shadow.css
+++ b/bricks/ai/src/chat-view/styles.shadow.css
@@ -270,24 +270,23 @@
               right: 0;
               display: flex;
               gap: 12px;
+              align-items: center;
 
               eo-icon {
                 cursor: pointer;
                 color: #606f7c;
 
-                &.unlike {
-                  padding-right: 12px;
-                  border-right: 1px solid #d9d9d9;
-                }
-
                 &.active {
                   color: var(--color-brand);
                 }
               }
-              /* eo-icon[icon="dislike"] {
-                padding-right: 12px;
-                border-right: 1px solid #d9d9d9;
-              } */
+
+              .split {
+                width: 1px;
+                height: 16px;
+                background-color: #d9d9d9;
+                margin-bottom: 1px;
+              }
             }
           }
         }
