feat(chat-view): support cmdb-instance-list

--- a/bricks/ai/src/chat-view/components/MessageItem/Markdown/markdown.shadow.css
+++ b/bricks/ai/src/chat-view/components/MessageItem/Markdown/markdown.shadow.css
@@ -174,8 +174,8 @@ img.ProseMirror-separator {
 }
 
 .milkdown-theme-nord.prose table {
-  margin: 1rem !important;
-  overflow: visible !important;
+  /* margin: 1rem !important; */
+  /* overflow: visible !important; */
   font-size: 0.875rem;
   line-height: 1.25rem;
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
