feat(chat-view): Input support mentions agent and setAgent

--- a/bricks/ai/src/chat-view/styles.shadow.css
+++ b/bricks/ai/src/chat-view/styles.shadow.css
@@ -261,6 +261,11 @@
         width: 36px;
         height: 36px;
         margin-top: 32px;
+        border-radius: 50%;
+        font-size: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
         &.user {
           background-image: url("./assets/user.png");
@@ -349,6 +354,65 @@
   margin: 0 auto;
   max-width: 100%;
   box-sizing: border-box;
+
+  .mentions-list-wrapper {
+    position: absolute;
+    bottom: 100%;
+    left: 12px;
+    right: 12px;
+
+    .content {
+      background-color: var(--antd-input-bg);
+      border-radius: 6px;
+      border: 1px solid var(--palette-gray-4);
+      padding: 8px;
+
+      .mentions-title {
+        font-size: 14px;
+        font-weight: bold;
+        color: var(--color-strong-text);
+        padding-bottom: 8px;
+      }
+
+      .mentions-list {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        max-height: 300px;
+        overflow-y: auto;
+        .mentions-item {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          gap: 12px;
+          padding: 8px;
+          border-radius: 6px;
+          cursor: pointer;
+          .icon {
+            font-size: 18px;
+            padding: 8px;
+            border-radius: 50%;
+          }
+          .name {
+            color: var(--color-normal-text);
+          }
+          .description {
+            flex: 1;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            font-size: 12px;
+            color: var(--color-disabled-text);
+          }
+
+          &:hover,
+          &.active {
+            background: var(--palette-gray-3);
+          }
+        }
+      }
+    }
+  }
 
   &.fill-content {
     border-top: 1px solid rgba(197, 197, 197, 0.5);
