fix(): fix workbench tree styles

--- a/bricks/visual-builder/src/workbench-tree/WorkbenchTree.shadow.css
+++ b/bricks/visual-builder/src/workbench-tree/WorkbenchTree.shadow.css
@@ -103,11 +103,21 @@
   padding: 0 15px;
 }
 
+.nodeLabelLink {
+  display: block;
+}
+
+.nodeLabelLink::part(link) {
+  display: flex;
+}
+
 .nodeLabelRow {
   display: flex;
   cursor: pointer;
   height: 22px;
   padding-right: 10px;
+  flex: 1;
+  min-width: 0;
 }
 
 .nodeLabelRow:hover,
