feat(): 新版拓扑图支持区域连线
Closes CMDB_VIEW-211

--- a/bricks/diagram/src/shared/canvas/styles.shadow.css
+++ b/bricks/diagram/src/shared/canvas/styles.shadow.css
@@ -67,6 +67,7 @@
 }
 
 .cell.active .decorator-area .area,
+.allowEdgeToArea:hover .decorator-area .area,
 .cell.active .line-active-bg {
   stroke: var(--palette-blue-5);
   stroke-dasharray: var(--dasharray);
