--- a/bricks/presentational/src/card-item/styles.shadow.css
+++ b/bricks/presentational/src/card-item/styles.shadow.css
@@ -25,7 +25,7 @@ eo-link {
 .card-wrapper {
   position: relative;
   background: var(--local-card-background-color);
-  box-shadow: var(--local-box-shadow); /* simulate boarder */
+  border: var(--local-card-border);
   border-radius: var(--larger-border-radius);
   transition: var(--card-transition);
   overflow: hidden;
@@ -34,8 +34,13 @@ eo-link {
 }
 
 .card-wrapper:hover {
+  border-color: transparent;
   box-shadow: var(--local-card-hovered-box-shadow);
   background: var(--local-card-hovered-background-color);
+}
+
+.card-wrapper.selected {
+  border-color: var(--palette-blue-6);
 }
 
 /* header */
