fix(): chat-view默认命令字展示支持copy
Ref: TOOL-1772

--- a/bricks/ai/src/chat-view/components/MessageItem/Markdown/CodeBlock/CodeBlock.shadow.css
+++ b/bricks/ai/src/chat-view/components/MessageItem/Markdown/CodeBlock/CodeBlock.shadow.css
@@ -68,3 +68,18 @@
     margin-top: 12px;
   }
 }
+
+.default-container {
+  .default-toolbar-container {
+    visibility: hidden;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+}
+
+.default-container:hover {
+  .default-toolbar-container {
+    visibility: visible;
+  }
+}
