--- a/bricks/presentational/src/card-item/host-contenxt.css
+++ b/bricks/presentational/src/card-item/host-contenxt.css
@@ -3,9 +3,11 @@
   --local-cover-border-bottom: 1px solid var(--card-item-border-color);
   --local-box-shadow: 0 0 0 1px var(--card-item-border-color);
   --local-card-hovered-border: none;
+  --local-card-selected-border-color: var(--palette-blue-6);
   --local-card-background-color: var(--card-item-bg);
   --local-cover-background-color: var(--color-fill-bg-base-3);
   --local-card-hovered-background-color: var(--card-item-hover-bg);
+  --local-card-selected-background-color: var(--local-card-background-color);
   --local-card-hovered-box-shadow: var(--card-item-hover-shadow);
   --local-card-title-color: var(--text-color-title);
   --local-card-hovered-title-color: var(--color-brand);
@@ -16,8 +18,12 @@ eo-card-item[style-type="grayish"] {
   --local-card-border: 1px solid transparent;
   --local-box-shadow: 0 0 0 1px transparent;
   --local-card-hovered-border: 1px solid transparent;
+  --local-card-selected-border-color: transparent;
   --local-card-background-color: #f6f8fa;
   --local-card-hovered-background-color: var(--color-fill-bg-container-1);
+  --local-card-selected-background-color: var(
+    --local-card-hovered-background-color
+  );
   --local-card-hovered-box-shadow: 0px 2px 12px 0px rgba(0, 0, 0, 0.06);
   --local-card-title-color: var(--color-header-text);
   --local-card-hovered-title-color: var(--color-brand);
@@ -33,6 +39,7 @@ html[data-theme="dark"],
 html[data-theme="dark-v2"] {
   eo-card-item[style-type="grayish"] {
     --local-card-hovered-border: 1px solid rgba(255, 255, 255, 0.12);
+    --local-card-selected-border-color: transparent;
     --local-card-background-color: rgb(255 255 255 / 8%);
     --local-card-hovered-box-shadow: none;
     --local-card-icon-box-shadow: none;
