--- a/bricks/ai/src/chat-view/styles.shadow.css
+++ b/bricks/ai/src/chat-view/styles.shadow.css
@@ -461,6 +461,7 @@
       background-color: transparent;
       cursor: inherit;
       transition: all 300ms ease-out;
+      box-sizing: content-box;
 
       &::placeholder {
         color: #b0b1b8;
