--- a/bricks/diagram/src/shared/canvas/styles.shadow.css
+++ b/bricks/diagram/src/shared/canvas/styles.shadow.css
@@ -67,7 +67,7 @@
 }
 
 .cell.active .decorator-area .area,
-.allowEdgeToArea:hover .decorator-area .area,
+.allowEdgeToArea .decorator-area .area:hover,
 .cell.active .line-active-bg {
   stroke: var(--palette-blue-5);
   stroke-dasharray: var(--dasharray);
