fix(): style update

--- a/bricks/ai/src/chat-view/styles.shadow.css
+++ b/bricks/ai/src/chat-view/styles.shadow.css
@@ -100,12 +100,6 @@
       line-height: 22px;
       font-size: 16px;
     }
-
-    .toolbar {
-      eo-icon {
-        cursor: pointer;
-      }
-    }
   }
   .chat-view {
     max-width: 100%;
@@ -298,7 +292,7 @@
                 white-space: pre-wrap;
               }
             }
-            .toolbar {
+            .message-toolbar {
               display: flex;
               gap: 12px;
               justify-content: end;
