feat(): support user message item render markdown

--- a/bricks/ai/src/chat-view/styles.shadow.css
+++ b/bricks/ai/src/chat-view/styles.shadow.css
@@ -230,6 +230,11 @@
               .content {
                 background-color: #606f7c;
                 color: #fff;
+
+                .ProseMirror.prose {
+                  /* 修改markdown字体颜色 */
+                  color: #fff;
+                }
               }
               &:hover {
                 .content-tip {
