fix(show-dialog): fix long word does not line break
Closes CD-8093

--- a/bricks/basic/src/data-providers/show-dialog/dialog.module.css
+++ b/bricks/basic/src/data-providers/show-dialog/dialog.module.css
@@ -17,6 +17,12 @@
   gap: var(--sl-spacing-large);
 }
 
+.content {
+  flex: 1;
+  min-width: 0;
+  overflow-wrap: break-word;
+}
+
 .contentTitle {
   margin-bottom: var(--sl-spacing-medium);
   font-size: var(--sl-font-size-medium);
