fix(): 优化图片的展示大小
Ref: POKEMON-625

--- a/bricks/markdown/src/markdown-editor/markdown-editor.shadow.css
+++ b/bricks/markdown/src/markdown-editor/markdown-editor.shadow.css
@@ -137,7 +137,7 @@ img.ProseMirror-separator {
   margin-top: 0 !important;
   margin-bottom: 0 !important;
   display: inline-block;
-  max-width: 100%;
+  max-width: 960px;
 }
 
 .milkdown-theme-nord.prose
