fix(): 修改表格宽度
Ref: POKEMON-625

--- a/bricks/markdown/src/markdown-editor/markdown-editor.shadow.css
+++ b/bricks/markdown/src/markdown-editor/markdown-editor.shadow.css
@@ -60,7 +60,7 @@ img.ProseMirror-separator {
 .ProseMirror table {
   border-collapse: collapse;
   table-layout: fixed;
-  width: 100%;
+  max-width: 80%;
   overflow: hidden;
 }
 
