--- a/bricks/nav/src/nav-menu/nav-menu.shadow.css
+++ b/bricks/nav/src/nav-menu/nav-menu.shadow.css
@@ -85,7 +85,7 @@ eo-menu-item {
   border-radius: 4px;
   padding: 1px 8px;
   line-height: 22px;
-  color: var(--color-normal-text);
+  color: var(--nav-menu-item-label-color);
 }
 
 .menu-item-label:hover {
