feat(card-item): add showActions and cardStyle properties
Closes CD-8341

--- a/bricks/presentational/src/card-item/styles.shadow.css
+++ b/bricks/presentational/src/card-item/styles.shadow.css
@@ -117,6 +117,14 @@ eo-link {
   right: 8px;
 }
 
+.card-wrapper.show-actions-hover .operator {
+  visibility: hidden;
+}
+
+.card-wrapper.show-actions-hover:hover .operator {
+  visibility: visible;
+}
+
 /* content */
 :host(:not([has-header])) .card-content {
   padding-top: 16px;
