--- a/bricks/basic/src/tag/tag.shadow.css
+++ b/bricks/basic/src/tag/tag.shadow.css
@@ -209,6 +209,17 @@
   color: var(--tag-inverse-text-color);
   background: var(--tag-teal-inverse-color);
 }
+
+.color-pink {
+  color: var(--tag-pink-color);
+  background-color: var(--tag-pink-background);
+  border-color: var(--tag-pink-border-color);
+}
+
+.color-pink-inverse {
+  color: var(--tag-inverse-text-color);
+  background: var(--tag-pink-inverse-color);
+}
 /* Color */
 
 .tag-icon {
