fix(): AI聊天框【停止生成】会跟助手名称重叠
Ref: INFRA-3244

--- a/bricks/ai/src/chat-view/styles.shadow.css
+++ b/bricks/ai/src/chat-view/styles.shadow.css
@@ -213,7 +213,7 @@
       padding-right: 40px;
 
       &:last-child {
-        margin-bottom: 40px;
+        margin-bottom: 10px;
       }
 
       &.user {
@@ -352,7 +352,7 @@
 .search-input-box {
   display: flex;
   flex-direction: column;
-  height: 75px;
+  height: 87px;
   padding: 12px;
   position: relative;
   margin: 0 auto;
@@ -361,7 +361,9 @@
 
   .input-toobar {
     position: absolute;
-    bottom: 100%;
+    bottom: 71%;
+    left: 12px;
+    right: 12px;
   }
 
   .mentions-list-wrapper {
