fix(): 把重新提问按钮放到toolbar
Ref: INFRA-3280

--- a/bricks/ai/src/chat-view/styles.shadow.css
+++ b/bricks/ai/src/chat-view/styles.shadow.css
@@ -230,8 +230,8 @@
           .message-content {
             justify-content: end;
             .wrapper {
-              display: flex;
-              flex-direction: row-reverse;
+              /* display: flex;
+              flex-direction: row-reverse; */
               .content {
                 background-color: #606f7c;
                 color: #fff;
@@ -241,13 +241,13 @@
                   color: #fff;
                 }
               }
-              &:hover {
+              /* &:hover {
                 .content-tip {
                   display: block;
                 }
-              }
+              } */
 
-              .content-tip {
+              /* .content-tip {
                 display: none;
 
                 eo-icon {
@@ -255,7 +255,7 @@
                   color: #606f7c;
                   cursor: pointer;
                 }
-              }
+              } */
             }
           }
         }
