feat(): add Style schema and fix code editor default emit event

--- a/bricks/vs/src/code-editor/index.css
+++ b/bricks/vs/src/code-editor/index.css
@@ -1,5 +1,5 @@
 .highlight {
-  color: rgb(74 170 189) !important;
+  text-decoration-color: rgb(74 170 189);
   text-decoration: underline;
   font-weight: bold;
   font-style: oblique;
