chore(): 选择框构件文本左对齐
Closes POKEMON-751

--- a/bricks/form/src/checkbox/checkbox.shadow.css
+++ b/bricks/form/src/checkbox/checkbox.shadow.css
@@ -10,7 +10,7 @@
   align-items: baseline;
   cursor: pointer;
   line-height: 22px;
-  text-align: center;
+  text-align: left;
   box-sizing: 22px;
   padding: 1px 4px;
   border-radius: var(--medius-border-radius);
