--- a/bricks/ai/src/chat-view/styles.shadow.css
+++ b/bricks/ai/src/chat-view/styles.shadow.css
@@ -132,7 +132,7 @@
       cursor: pointer;
       border-radius: var(--small-border-radius);
       background-color: var(--third-menu-default-bg);
-      padding: 6px 16px;
+      padding: 6px 18px;
       color: var(--color-header-text);
       margin-top: 8px;
       overflow: hidden;
@@ -151,6 +151,14 @@
 
       &:hover {
         .session-close-btn {
+          eo-icon {
+            display: block;
+          }
+        }
+      }
+
+      &:hover {
+        .session-edit-btn {
           eo-icon {
             display: block;
           }
@@ -177,9 +185,25 @@
         align-items: center;
         cursor: pointer;
         font-size: 12px;
+        margin-left: 6px;
 
         &:hover {
           color: var(--color-error);
+        }
+
+        eo-icon {
+          display: none;
+        }
+      }
+
+      .session-edit-btn {
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        font-size: 12px;
+
+        &:hover {
+          color: var(--color-info);
         }
 
         eo-icon {
@@ -629,5 +653,56 @@
 
   &::after {
     margin-left: 10px;
+  }
+}
+
+.session-search-input-box {
+  position: relative;
+  display: inline-flex;
+  padding: var(--input-affix-wrapper-padding);
+  border-radius: var(--small-border-radius);
+  height: fit-content;
+  color: var(--text-color-default);
+  background-color: var(--antd-input-bg);
+  border: 1px solid var(--color-border-divider-line);
+  margin-bottom: 8px;
+
+  input {
+    width: 100%;
+    padding: 4px 28px 4px 8px;
+    outline: none;
+    border: none;
+    color: var(--color-normal-text);
+    background-color: transparent;
+    cursor: inherit;
+    transition: all 300ms ease-out;
+    box-sizing: content-box;
+
+    &::placeholder {
+      color: #b0b1b8;
+    }
+  }
+
+  .suffix-icon {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    color: var(--color-secondary-text);
+
+    eo-tooltip {
+      display: flex;
+    }
+
+    eo-icon {
+      font-size: 18px;
+      cursor: pointer;
+      padding: 6px;
+      border-radius: 3px;
+      &:not(.disabled):hover {
+        color: var(--color-info-active);
+      }
+    }
   }
 }
